--- a/views/scoreboard.pug
+++ b/views/scoreboard.pug
@@ -9,7 +9,11 @@ html
   body.flex.items-center.justify-center.flex-col.h-screen.prose.font-press-start.max-w-full.mx-20
     h1.text-primary Scoreboard
 
-    table.table.max-w-7xl
+    .absolute.top-7.right-7.flex.flex-col
+      a(href=challengesUrl).btn.btn-primary Go to challenges
+      a(href='/flag').btn.btn-primary.mt-5 Submit a flag
+
+    table.table.max-w-screen-lg
       thead 
         tr 
           th 
